# nightingale-platform

./: .gitignore  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  run.py  test.py
backend/alembic/: env.py
backend/alembic/versions/: 5402ebc540ac_修改user表为users_以及修改env_py配置.py  5ba5a1046684_users表除了默认值都可以为空.py  8377e31fd9a9_新增头像url列.py  95d94215c2b6_users的phone_nbr字段类型变为str.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/endpoints/: users.py
backend/app/core/: captcha_data.py  config.py  security.py
backend/app/crud/: crud_user.py  redis.py
backend/app/db/: mysql_session.py  pgsql_session.py  redis_session.py  session.py
backend/app/middleware/: auth.py  log_middleware.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  user.py  user_schema.py
backend/app/services/: auth.py  send_captche.py  user_service.py
backend/app/tasks/: email_tasks.py
backend/app/utils/: email_util.py  security.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: HandMenus.vue  HeaderMenus.vue  PageContain.vue  TerminalWindow.vue
frontend/src/hooks/: useCustomTheme.ts
frontend/src/layout/: MainLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: counter.ts
frontend/src/styles/: global.scss  settings.scss  variables.scss
frontend/src/theme/: customDarkTheme.ts  customLightTheme.ts
frontend/src/views/: FirstHome.vue
(+16 files in other folders)
