[project]
name = "nightingale-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.126.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
