[project]
name = "nightingale-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "celery>=5.6.2",
    "fastapi-cdn-host>=0.9.3",
    "fastapi[standard]>=0.126.0",
    "passlib>=1.7.4",
    "pyjwt==2.10.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
