[project]
name = "nightingale-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi-cdn-host>=0.9.3",
    "fastapi[standard]>=0.126.0",
    "greenlet>=3.3.0",
    "passlib>=1.7.4",
    "pwdlib>=0.3.0",
    "pyjwt==2.10.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
